public class Substance {
}
